chore: create new folder to store recommendation's code

--- a/Desenvolvimento/recomendação/context_based_recommendation.ipynb
+++ b/Desenvolvimento/recomendação/context_based_recommendation.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,36 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidates = ['bolsonaro', 'ciro', 'daciolo','boulos', 'haddad', 'marina']"
+    "df_cand = cp2.getDataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_cand = {}\n",
-    "for cand in candidates:\n",
-    "    dict_cand[cand] = cp2.getCand(cand)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cand = pd.DataFrame(data=dict_cand).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +198,7 @@
        "marina       0.200668  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
