chore: change code's name

--- a/Desenvolvimento/recomendação/content_based_recommendation.ipynb
+++ b/Desenvolvimento/recomendação/content_based_recommendation.ipynb
@@ -48,16 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import *\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import candidate_provider as cp\n",
-    "import candidate_provider_2 as cp2"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cand = pd.read_csv('../datasets/candidate.csv')\n",
+    "candidates = ['bolsonaro', 'ciro', 'daciolo', 'boulos', 'marina', 'haddad']\n",
+    "df_cand.index = candidates"
    ]
   },
   {
@@ -66,23 +74,12 @@
    "source": [
     "## Primeiro *Dataset*\n",
     "\n",
-    "Este *dataset* foi obtida a partir da métrica TF-IDF de cada proposta dos ex-candidatos. Os dados serão lidas a partir da biblioteca `candidate_provider_2`.\n",
-    "\n",
-    "Assim que possível o *dataset* será transformado em um arquivo .csv, facilitando a leitura."
+    "Este *dataset* foi obtida a partir da métrica TF-IDF de cada proposta dos ex-candidatos. Os dados foram processados em `providers/algoritmos/candidate_provider_2.py` e exportados para um arquivo `.csv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cand = cp2.getDataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +154,7 @@
        "      <td>2.078143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>haddad</th>\n",
+       "      <th>marina</th>\n",
        "      <td>0.453759</td>\n",
        "      <td>1.045867</td>\n",
        "      <td>0.665708</td>\n",
@@ -167,7 +164,7 @@
        "      <td>0.443712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>marina</th>\n",
+       "      <th>haddad</th>\n",
        "      <td>0.163086</td>\n",
        "      <td>0.434171</td>\n",
        "      <td>0.229158</td>\n",
@@ -186,19 +183,19 @@
        "ciro       0.577953  1.572047  0.973766       0.467057  0.755462   0.962723   \n",
        "daciolo    0.053222  0.286808  0.513717       0.062666  0.368084   0.325294   \n",
        "boulos     1.929544  3.294471  2.777466       1.666706  2.350678   2.757596   \n",
-       "haddad     0.453759  1.045867  0.665708       0.252479  0.404181   0.394746   \n",
-       "marina     0.163086  0.434171  0.229158       0.100869  0.257830   0.163831   \n",
+       "marina     0.453759  1.045867  0.665708       0.252479  0.404181   0.394746   \n",
+       "haddad     0.163086  0.434171  0.229158       0.100869  0.257830   0.163831   \n",
        "\n",
        "           tecnologia  \n",
        "bolsonaro    1.124516  \n",
        "ciro         0.702406  \n",
        "daciolo      0.154583  \n",
        "boulos       2.078143  \n",
-       "haddad       0.443712  \n",
-       "marina       0.200668  "
+       "marina       0.443712  \n",
+       "haddad       0.200668  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +331,7 @@
        "      <td>3.498938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>haddad</th>\n",
+       "      <th>marina</th>\n",
        "      <td>1.494300</td>\n",
        "      <td>2.225015</td>\n",
        "      <td>1.755864</td>\n",
@@ -344,7 +341,7 @@
        "      <td>1.481900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>marina</th>\n",
+       "      <th>haddad</th>\n",
        "      <td>1.135582</td>\n",
        "      <td>1.470127</td>\n",
        "      <td>1.217120</td>\n",
@@ -363,19 +360,19 @@
        "ciro       1.647567  2.874370  2.136036       1.510711  1.866628   2.122408   \n",
        "daciolo    1.000000  1.288266  1.568293       1.011654  1.388568   1.335761   \n",
        "boulos     3.315554  5.000000  4.361968       2.991188  3.835272   4.337447   \n",
-       "haddad     1.494300  2.225015  1.755864       1.245901  1.433115   1.421472   \n",
-       "marina     1.135582  1.470127  1.217120       1.058801  1.252505   1.136502   \n",
+       "marina     1.494300  2.225015  1.755864       1.245901  1.433115   1.421472   \n",
+       "haddad     1.135582  1.470127  1.217120       1.058801  1.252505   1.136502   \n",
        "\n",
        "           tecnologia  \n",
        "bolsonaro    2.322075  \n",
        "ciro         1.801152  \n",
        "daciolo      1.125088  \n",
        "boulos       3.498938  \n",
-       "haddad       1.481900  \n",
-       "marina       1.181962  "
+       "marina       1.481900  \n",
+       "haddad       1.181962  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(11.76794027045537, 'ciro'), (12.258694453557807, 'haddad'), (13.024734504480588, 'bolsonaro'), (13.729005732266298, 'boulos'), (14.052411038190343, 'marina'), (14.059505515134052, 'daciolo')]\n"
+      "[(11.76794027045537, 'ciro'), (12.258694453557807, 'marina'), (13.024734504480588, 'bolsonaro'), (13.729005732266298, 'boulos'), (14.052411038190343, 'haddad'), (14.059505515134052, 'daciolo')]\n"
      ]
     }
    ],
@@ -495,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4.3601139140300145, 'boulos'), (7.104393269925497, 'bolsonaro'), (12.041128265916582, 'ciro'), (14.942433894802575, 'haddad'), (17.282369014884114, 'daciolo'), (17.547401864351592, 'marina')]\n"
+      "[(4.360113914030015, 'boulos'), (7.104393269925497, 'bolsonaro'), (12.041128265916582, 'ciro'), (14.942433894802575, 'marina'), (17.282369014884114, 'daciolo'), (17.547401864351592, 'haddad')]\n"
      ]
     }
    ],
@@ -512,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(8.853149930934752, 'ciro'), (9.360113914030016, 'boulos'), (10.044405881219852, 'bolsonaro'), (10.931033187153067, 'haddad'), (12.282369014884113, 'daciolo'), (12.818565511786758, 'marina')]\n"
+      "[(8.853149930934752, 'ciro'), (9.360113914030016, 'boulos'), (10.044405881219852, 'bolsonaro'), (10.931033187153067, 'marina'), (12.282369014884113, 'daciolo'), (12.818565511786758, 'haddad')]\n"
      ]
     }
    ],
@@ -545,43 +542,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este *dataset* foi obtido diretamente das propostas de cada candidato, onde verificou-se quantas vezes tal candidato mencionou palavras sobre cada área de interesse. Novamente o *dataset* será lido da sua biblioteca, a `candidate_provider`.\n",
+    "Este *dataset* foi obtido diretamente das propostas de cada candidato, onde verificou-se quantas vezes tal candidato mencionou palavras sobre cada área de interesse. Os dados foram processados em `providers/algoritmos/candidate_provider.py` e exportados para um arquivo `.csv`.\n",
     "\n",
     "**Obs.:** Como a proposta do ex-candidato Boulos é bem maior que as outras propostas, **todas** as suas colunas são bem maiores que as outras."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidates = ['alckmin', 'alvaro', 'amoedo', 'bolsonaro', 'boulos', 'ciro', 'daciolo', 'haddad', 'marina', 'meirelles']"
+    "df_cand_2 = pd.read_csv('../datasets/candidate_2.csv')\n",
+    "candidates = ['alckmin', 'alvaro', 'amoedo', 'bolsonaro', 'boulos', 'ciro', 'daciolo', 'haddad', 'marina', 'meirelles']\n",
+    "df_cand_2.index = candidates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_cand_2 = {}\n",
-    "for cand in candidates:\n",
-    "    dict_cand_2[cand] = cp.count_words_from(cand)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cand_2 = pd.DataFrame(data=dict_cand_2).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +724,7 @@
        "meirelles           8  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +927,7 @@
        "meirelles    1.029233  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
